# ObjectInC

./: CMakeLists.txt  README.md  main.c
Circle/: CMakeLists.txt  circle.c  circle.h
Point/: CMakeLists.txt  point.c  point.h
Rect/: CMakeLists.txt  rect.c  rect.h
